# 0.00.35 (50445) Apr 8, 2011
Reduced the size of the expanded protractor so that its circle fits within the play area when it is centered
Moved the protractor behind the light node so that it also goes behind other controls (such as wavelength controls), since otherwise it obscures them from interaction
Moved the +/- button to the right side of the protractor
# 0.00.34 (50440) Apr 8, 2011
Fixed: combo box sometimes reads out wrong material in the "more tools" tab
Moved reset all button to lower right in the "prism break" tab
Made the protractor expandable in the "more tools" tab
Made reflections dimmer in "white light" mode
Moved "low" and "high" labels up to be more in line with the slider track
# 0.00.33 (50430) Apr 7, 2011
Reduced the size of prisms in the toolbox to shrink the toolbox
Increased the number of sides for continuous prism shapes to avoid a sampling problem with white light
# 0.00.32 (50419) Apr 7, 2011
Centered the reset button below the laser control panel node in the "prism break" tab
Combined prism medium control into prism toolbox in the "prism break" tab
Reduced the number of decimals to 3 for indices of refraction in the "more tools" tab
Fixed: made the control panel wide enough to hold the laser wavelength control, but not resize as controls move around.
# 0.00.31 (50113) Mar 28, 2011
# 0.00.30 (50111) Mar 28, 2011
Switched bottom medium to glass on 2nd tab since that has a bigger wavelength dependent bend
Fixed: medium interface jitters when changing wavelength in the 2nd tab--converted to use BufferedPhetPCanvas, see #2786
# 0.00.29 (50073) Mar 24, 2011
Fixed dispersion function so that air dispersion is modeled properly
Added interpolation between dispersion functions for air and glass
Increased number of decimal places for medium indices of refraction for "more tools" tab
Moved VelocitySensorNode to piccolo-phet for reuse in Fluid Pressure and Flow
Improved docs and API for VelocitySensorNode
# 0.00.28 (50003) Mar 20, 2011